# ai_request_classifier

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yaml
src/: config.py  main.py  service.py
src/ai/gemini/: client.py  parser.py  prompts.py
src/core/: decorators.py  enums.py  exceptions.py  schemas.py
src/core/base/ai/: client.py  parser.py
src/core/base/io/: reader.py  writer.py
src/readers/: csv_reader.py
src/writers/: json_writer.py  md_writer.py
