[project]
name = "ai-request-classifier"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.12",
    "google-genai>=2.9.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"